Fixes from kin@netscape.com and brade@netscape.com for bug #86450: pasting plaintext into text area loses significant whitespace

content/base/src/nsDocumentEncoder.cpp
        - Look for -moz-pre-wrap in the correct attribute ("style").

    editor/base/nsHTMLDataTransfer.cpp
    editor/base/nsPlaintextDataTransfer.cpp
        - Set the correct mime-type on the encoder and transfer data.
        - Pass correct init flags to encoder.

    layout/base/src/nsCopySupport.cpp
    layout/base/src/nsCopySupport.h:
        - Added IsPlainTextContext() method.
        - Modified HTMLCopy() to pass correct init flags and
          mime-type to the encoder during plaintext copy.

r=kin@netscape.com,brade@netscape.com sr=sfraser@netscape.com